@@ -15,7 +15,9 @@ package org.eclipse.osee.testscript.internal;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
 import org.eclipse.osee.framework.core.data.ArtifactId;
 import org.eclipse.osee.framework.core.data.AttributeTypeToken;
 import org.eclipse.osee.framework.core.data.BranchId;
@@ -24,8 +26,11 @@ import org.eclipse.osee.framework.core.enums.CoreRelationTypes;
 import org.eclipse.osee.framework.jdk.core.type.OseeCoreException;
 import org.eclipse.osee.framework.jdk.core.util.Strings;
 import org.eclipse.osee.orcs.core.ds.FollowRelation;
+import org.eclipse.osee.testscript.DashboardApi;
 import org.eclipse.osee.testscript.ScriptDefApi;
 import org.eclipse.osee.testscript.ScriptDefEndpoint;
+import org.eclipse.osee.testscript.ScriptDefToken;
+import org.eclipse.osee.testscript.ScriptTeamToken;
 
 /**
  * @author Stephen J. Molaro
@@ -33,9 +38,11 @@ import org.eclipse.osee.testscript.ScriptDefEndpoint;
 public class ScriptDefEndpointImpl implements ScriptDefEndpoint {
 
    private final ScriptDefApi scriptDefApi;
+   private final DashboardApi dashboardApi;
    private final BranchId branch;
-   public ScriptDefEndpointImpl(BranchId branch, ScriptDefApi scriptDefTypeApi) {
+   public ScriptDefEndpointImpl(BranchId branch, ScriptDefApi scriptDefTypeApi, DashboardApi dashboardApi) {
       this.scriptDefApi = scriptDefTypeApi;
+      this.dashboardApi = dashboardApi;
       this.branch = branch;
    }
 
@@ -54,13 +61,36 @@ public class ScriptDefEndpointImpl implements ScriptDefEndpoint {
       try {
          String filter = scriptSetId.getIdString();
          if (scriptSetId.isValid()) {
-            return scriptDefApi.getAllByFilter(branch, filter,
-               FollowRelation.followList(CoreRelationTypes.TestScriptDefToTestScriptResults_TestScriptResults), pageNum,
-               pageSize, CoreAttributeTypes.Name, Arrays.asList(CoreAttributeTypes.SetId));
+            Collection<ScriptDefToken> scripts = scriptDefApi.getAllByFilter(branch, filter,
+               Arrays.asList(
+                  FollowRelation.follow(CoreRelationTypes.TestScriptDefToTestScriptResults_TestScriptResults)),
+               pageNum, pageSize, CoreAttributeTypes.Name, Arrays.asList(CoreAttributeTypes.SetId));
+            populateScriptTeams(scripts);
+            return scripts;
          }
-         return List.of();
+         return Collections.emptyList();
       } catch (Exception ex) {
          throw OseeCoreException.wrap(ex);
+      }
+   }
+
+   private void populateScriptTeams(Collection<ScriptDefToken> scripts) {
+      Map<ArtifactId, ScriptTeamToken> teams = new HashMap<>();
+      for (ScriptDefToken script : scripts) {
+         ArtifactId teamId = script.getTeam().getArtifactId();
+         if (teamId.isInvalid()) {
+            continue;
+         }
+         ScriptTeamToken team = teams.get(teamId);
+         if (team == null) {
+            team = this.dashboardApi.getTeam(branch, teamId);
+            if (team.getArtifactId().isValid()) {
+               teams.put(team.getArtifactId(), team);
+            }
+         }
+         if (team.getArtifactId().isValid()) {
+            script.setTeam(team);
+         }
       }
    }
 
